kvx-macros/tests/macro/fail-namespace-empty.rs
use kvx_macros::namespace;
use kvx_types::Namespace;

const NAMESPACE: &Namespace = namespace!("");

fn main() {}
